adjusted colors in dark mode; overflow hidden when menu open on mobile; fixed footer responsivness;

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,10 +15,13 @@
     --color-blue: #007BB6;
     --code-padding: 10px;
     --blockquote-left-border-color: #4f4fd3;
+    --gray-color:rgb(146, 148, 152); 
 }
 
 .dark-mode {
-    --bg-color: #121212;
+    /* --bg-color: #121212; */
+    /* --bg-color: #323232; */
+    --bg-color: #2b2b2b;
     --text-color: #ffffff;
     --blockquote-left-border-color: var(--color-blue);
 }
@@ -97,7 +100,7 @@ body {
 
 .dateTime {
     font-weight: 400;
-    color: gray;
+    color: var(--gray-color);
 }
 
 
